--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
+    "mapbox-gl": "^3.8.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-map-gl": "^7.1.7",
     "swiper": "^11.1.5"
   },
   "devDependencies": {
