--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-map-gl": "^7.1.7",
+    "recharts": "^2.15.0",
     "swiper": "^11.1.5"
   },
   "devDependencies": {
