--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.48.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.460.0",
     "mapbox-gl": "^3.8.0",
